# Tree_shell

./: CMakeLists.txt  README.md  main.cpp
tree/: about.cpp  benchmark.cpp  compare.cpp  find.cpp  kamikaze.cpp  list.cpp  load.cpp  register_defaults.cpp  run.cpp  tree_shell.cpp  tree_shell.hpp
tree/coordinator/: coordinator.cpp  coordinator.hpp  find_child.cpp  find_node.cpp  load_node.cpp  node.cpp  node.hpp  process_tests.cpp  split_string.cpp
tree/suite_testing/: suite.hpp  test.hpp
tree/suites_for_testing/: suites.cpp
tree/suites_for_testing/Test_suite1/: test1.cpp
tree/suites_for_testing/Test_suite2/: test2.cpp
tree/suites_for_testing/Test_suite3/: test3.cpp
